force-app/main/default/objects/Wallet__c/Wallet__c.object-meta.xml
<CustomObject>
    <label>Wallet</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000000000}</displayFormat>
        <label>Wallet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>wallets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>