force-app/main/default/objects/Wallet__c/fields/date_expiration__c.field-meta.xml
<CustomField>
    <fullName>date_expiration__c</fullName>
    <label>date expiration</label>
    <type>Date</type>
</CustomField>