force-app/main/default/objects/Wallet__c/fields/date_retractation__c.field-meta.xml
<CustomField>
    <fullName>date_retractation__c</fullName>
    <label>date retractation</label>
    <type>Date</type>
</CustomField>