force-app/main/default/objects/Wallet__c/fields/Master_Booking__c.field-meta.xml
<CustomField>
    <fullName>Master_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Booking</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>wallets (Master Booking)</relationshipLabel>
    <relationshipName>wallets1</relationshipName>
    <type>Lookup</type>
</CustomField>