force-app/main/default/objects/Wallet__c/fields/Person_account__c.field-meta.xml
<CustomField>
    <fullName>Person_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Guest Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>wallets</relationshipLabel>
    <relationshipName>wallets</relationshipName>
    <type>Lookup</type>
</CustomField>