force-app/main/default/objects/Wallet__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Earned</fullName>
            </value>
            <value>
                <fullName>Burned</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
                <isActive>false</isActive>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Valid</fullName>
                <isActive>false</isActive>
                <label>Valid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>